--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'template-name'
+rootProject.name = 'java-spring-gradle-hexagonal-template'
 
 include ':shared'
 project(':shared').projectDir = new File('src/shared')
